<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_HMIManager" Id="{a88b626b-1335-01ba-387a-b90d8f220c55}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_HMIManager EXTENDS FB_BaseGroupElement IMPLEMENTS ITF_HMIManager, ITF_HMIManagerConfigure
VAR
	(*	Inicjalizacja		*)
	bInitializeCycle			: BOOL;
	bInitDone					: BOOL;
	bIsValidData				: bool;
	(*	Konfiguracja		*)
	itfHMIConfigure				: ITF_HMIConfigure;		//moduł konfiguracji
	(*	Menu główne	*)
	itfMainMenu					: ITF_HMIEMenu;
	itfMainMenuHMI				: ITF_HMIEMenu_HMI;
	iNumberOfButtonMainMenu		: INT;
	iNumberOfActiveScreen		: INT;
	iNumberOfPreviewScreen		: INT;
	bChangePage					: BOOL;
//	(*	Obsługa zmiany strony	*)
//	arrChangePageSupport		: ARRAY [0..GVL_HMIEConstans.MAX_NUMBER_OF_BUTTON_IN_MENU] OF 
//									ARRAY [0..GVL_SaMConstans.NUMBER_OF_MODES] OF ITF_PrepareDataForScreen;
	(*	Dana wspólne dla całego systemu	*)
	refstManagerData			: REFERENCE TO ST_HMIManager;
	(*	Łącznik do MachineControl	*)
	itfMachineControl			: ITF_MCHMIMachineControl_HMI;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (NOT THIS^.bInitializeCycle) THEN
	THIS^.bInitializeCycle		:= TRUE;
	THIS^.bInitDone				:= THIS^.InitializeCycle ();
ELSIF (THIS^.bInitDone) THEN
	THIS^.ExecuteCycle ();
END_IF

]]></ST>
    </Implementation>
    <Folder Name="ITF_HMIManagerConfigure" Id="{89138cc2-cb73-0422-3e5b-ed5c94136f56}" />
    <Folder Name="WiazanieModulow" Id="{82c7cc63-7604-0b87-2d45-08cdf14b79c2}" />
    <Method Name="AddMachineControlConnectorFromConfiguration" Id="{1f32671d-7d0a-0b94-0866-9f070dcaf520}" FolderPath="ITF_HMIManagerConfigure\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		19.11.2025		TC 4024.66
	Dodanie połączenia do MachineControl  wywoływane z konfiguracji
*)
METHOD AddMachineControlConnectorFromConfiguration : BOOL
VAR_INPUT
	itfMachineControl	: ITF_MCHMIMachineControl_HMI;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.itfMachineControl := itfMachineControl;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddMainMenuFromConfiguration" Id="{0bcd27d6-400c-092f-1954-e2bd335ae594}" FolderPath="ITF_HMIManagerConfigure\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		14.11.2025		TC 4024.66
	Dodanie do systemu menu głównego 
*)
METHOD PUBLIC AddMainMenuFromConfiguration : BOOL
VAR_INPUT
	fbMenu			: ITF_HMIEMenu;
	fbMenu_HMI		: ITF_HMIEMenu_HMI;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.SetText (eLocation := E_BaseLocation.pl, wsDescription := "Menu główne");
THIS^.SetText (eLocation := E_BaseLocation.en, wsDescription := "Main menu");
THIS^.SetText (eLocation := E_BaseLocation.de, wsDescription := "Hauptmenü");
fbMenu.SetName (stName := THIS^.GetTexts ());
THIS^.AddControlElement (itfControlElement := fbMenu);

THIS^.itfMainMenu := fbMenu;
THIS^.itfMainMenu.LinkCommonData (stCommonData := THIS^.refstCommonData);

THIS^.itfMainMenuHMI  := fbMenu_HMI;
THIS^.itfMainMenuHMI.LinkCommonData (stCommonData := THIS^.refstCommonData);


]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddModulConfigure" Id="{5f177fbc-999e-00c7-3b52-585090f74977}" FolderPath="WiazanieModulow\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		29.10.2025		TC 4024.66
	Dodawanie intefejsu konfiguracji
*)
METHOD PUBLIC AddModulConfigure : BOOL
VAR_INPUT
	fbHMIConfigure			: ITF_HMIConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.itfHMIConfigure		:= fbHMIConfigure;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddPrepareScreenModuleFromConfiguration" Id="{e28d4628-ae05-0e0f-1c40-93eed2a23ed2}" FolderPath="ITF_HMIManagerConfigure\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		19.11.2025		TC 4024.66
	Dodanie modułów do przygotowywania stron do wyświetlenia
*)
METHOD AddPrepareScreenModuleFromConfiguration : BOOL
VAR_INPUT
	iScreen		: INT;
	iMode		: INT;
	itfModule	: ITF_MCHMIPrepareDataForScreen;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.itfMachineControl.AddPrepareScreenModuleFromManager (
	iScreen 	:= iScreen,
	iMode 		:= iMode,
	itfModule	:= itfModule
);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ExecuteCycle" Id="{52b242f4-a20c-0dfc-3dbf-ca9f805176f3}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		10.11.2025		TC 4024.66
	Główna metoda sterujaca wyświetlaniem dsanych na HMI
*)
METHOD PUBLIC ExecuteCycle
]]></Declaration>
      <Implementation>
        <ST><![CDATA[	(* Testowanie MenuGlownego	*)
THIS^.itfMainMenu.Testing ();
	(*	Przepisanie Aktualnych zmiennych menu do struktury danych HMI	*)

THIS^.itfMainMenuHMI.PrepareDataForHMI ();
	
	(*	Aktualizacja zmiennych przy zmianie strony	*)
THIS^.bChangePage := THIS^.itfMainMenuHMI.IsChangePage ();

IF (THIS^.bChangePage) THEN
	THIS^.itfMainMenu.ResetChangePage ();
	THIS^.iNumberOfPreviewScreen := THIS^.itfMainMenuHMI.GetNumberOfPreviewScreen ();
	THIS^.iNumberOfActiveScreen := THIS^.itfMainMenuHMI.GetNumberOfActiveScreen ();

//	IF (THIS^.arrChangePageSupport [THIS^.iNumberOfPreviewScreen] <> 0) THEN
//		THIS^.arrChangePageSupport [THIS^.iNumberOfPreviewScreen].ClaerAfterPage ();
//	END_IF
//	IF (THIS^.arrChangePageSupport [THIS^.iNumberOfActiveScreen] <> 0) THEN
//		THIS^.arrChangePageSupport [THIS^.iNumberOfActiveScreen].PreparePage ();
//	END_IF
END_IF

	(*	Odświerzenia strrony 	*)
//IF (THIS^.arrChangePageSupport [THIS^.iNumberOfActiveScreen] <> 0) THEN
//	THIS^.arrChangePageSupport [THIS^.iNumberOfActiveScreen].PrepareDataForHMI ();
	//wyczyszczenie po ramce 
	//przygotowanie ramki
//END_IF
	(*	Skasowanie flagi zmiany strony	*)

]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_init" Id="{85423e2b-17dc-0f54-335f-3500ae6327f4}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.SetText (eLocation := E_BaseLocation.pl, wsDescription := "HMI Menadżer");
THIS^.SetText (eLocation := E_BaseLocation.en, wsDescription := "HMI Manager");
THIS^.SetText (eLocation := E_BaseLocation.de, wsDescription := "HMI Manager");
THIS^.SetName (stName := THIS^.GetTexts ());
]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetNumberOfAddedButtons" Id="{b4de5001-4e2b-0739-0407-83d4f75cfbdf}">
      <Declaration><![CDATA[METHOD PUBLIC GetNumberOfAddedButtons : INT
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetNumberOfAddedButtons := THIS^.itfMainMenu.GetNumberOfAddedButton ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitializeCycle" Id="{4e6e3c9a-8c44-48fc-b890-f0782f1c52b4}">
      <Declaration><![CDATA[METHOD PRIVATE InitializeCycle : BOOL
VAR
	bResult					: BOOL;
	iI: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[bResult				:= TRUE;

bResult				:= bResult AND THIS^.itfHMIConfigure.Configure (fbHMIManager := THIS^);

InitializeCycle		:= bResult;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkHMIManagerDataFromConfiguration" Id="{1311aef0-5f44-031f-25c5-6387fb109106}" FolderPath="ITF_HMIManagerConfigure\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		18.11.2025		TC 4024.66
	Podłączenie głównej struktury danych dla domyślnych elementów 
*)
METHOD LinkHMIManagerDataFromConfiguration : BOOL
VAR_INPUT
	stData					: REFERENCE TO ST_HMIManager;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstManagerData	REF= stData;

THIS^.itfMainMenuHMI.LinkHMIEMenuData (stData := stData.stMainMenu);

THIS^.itfMachineControl.LinkMachineControlData (stData := stData.stMachineControl);

IF (__ISVALIDREF (THIS^.refstManagerData)) THEN
	THIS^.bIsValidData := TRUE;
	LinkHMIManagerDataFromConfiguration := TRUE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetButtonActiveFromConfiguration" Id="{fedf6645-8137-039a-163f-e3e84f2850c0}" FolderPath="ITF_HMIManagerConfigure\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		18.11.2025		TC 4024.66
	Ustawia przycisk na aktywny  - pierwsze okno w wyświetlaniu wizualizacji - wywoływane z konfiguracji
*)
METHOD SetButtonActiveFromConfiguration : BOOL
VAR_INPUT
	iNumber		: INT;	//numr przycisku
	bValue		: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.itfMainMenu.SetActiveButton (iButton := iNumber, bIN := bValue);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetButtonsEnabledFromConfiguration" Id="{aa8ece43-6f62-0964-0131-2e7de7848867}" FolderPath="ITF_HMIManagerConfigure\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		18.11.2025		TC 4024.66
	Ustawia przyciski na wlaczone lub wylaczone - możliwośc naciśnięcia
*)
METHOD SetButtonsEnabledFromConfiguration : BOOL
VAR_INPUT
	iNumber		: INT;	//numr przycisku
	bValue		: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.itfMainMenu.SetEnableButton (iButton := iNumber, bIN := bValue);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetButtonsVisibleFromConfiguration" Id="{015942ef-7976-0c37-1c42-7276c7080563}" FolderPath="ITF_HMIManagerConfigure\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		18.11.2025		TC 4024.66
	Ustawia przyciski na widoczne lub nie widoczne
*)
METHOD SetButtonsVisibleFromConfiguration : BOOL
VAR_INPUT
	iNumber		: INT;	//numr przycisku
	bValue		: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.itfMainMenu.SetVisibleButton (iButton := iNumber, bIN := bValue);
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>